src/objects/Lcm_TestCase__c.object
<CustomObject>
    <description>Testfälle des Testmanagementsystems von LCM</description>
    <fields>
        <fullName>Lcm_DescriptionManagement2__c</fullName>
        <description>Weitere Hinweise, nur sichtbar/änderbar von Testmanagement</description>
        <inlineHelpText>Weitere Hinweise, nur sichtbar/änderbar von Testmanagement</inlineHelpText>
        <label>Hinweis Testmanagement 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_DescriptionManagement__c</fullName>
        <description>Hinweise, nur sichtbar/änderbar von Testmanagement</description>
        <inlineHelpText>Hinweise, nur sichtbar/änderbar von Testmanagement</inlineHelpText>
        <label>Hinweis Testmanagement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_Description__c</fullName>
        <description>Beschreibung des Testfalls</description>
        <inlineHelpText>Beschreibung des Testfalls</inlineHelpText>
        <label>Beschreibung</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_ExpResult__c</fullName>
        <description>erwartetes Ergebnis am Ende der Testausführung</description>
        <inlineHelpText>erwartetes Ergebnis am Ende der Testausführung</inlineHelpText>
        <label>Erwartetes Ergebnis</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_Precondition__c</fullName>
        <description>Vorbedingungen, die erfüllt sein müssen, damit Testfall ausgeführt werden kann.</description>
        <inlineHelpText>Vorbedingungen, die erfüllt sein müssen, damit Testfall ausgeführt werden kann.</inlineHelpText>
        <label>Vorbedingungen</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_Prio__c</fullName>
        <description>Testfall mit Priorität &quot;Blocker&quot; verhindert Livesetzung eines Changes im Rahmen von Regressionstests</description>
        <inlineHelpText>Testfall mit Priorität &quot;Blocker&quot; verhindert Livesetzung eines Changes im Rahmen von Regressionstests</inlineHelpText>
        <label>Priorität</label>
        <picklist>
            <picklistValues>
                <fullName>Blocker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lcm_RequirementDescription__c</fullName>
        <description>Beschreibung des zugehörigen Requirements</description>
        <formula>Lcm_Requirement__r.Lcm_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Beschreibung des zugehörigen Requirements</inlineHelpText>
        <label>Requirement Beschreibung</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_RequirementName__c</fullName>
        <description>Name des Requirements</description>
        <formula>Lcm_Requirement__r.Lcm_RequirementName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name des Requirements</inlineHelpText>
        <label>Requirement-Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_Requirement__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Requirement, auf das sich der Testfall bezieht</description>
        <inlineHelpText>Requirement, auf das sich der Testfall bezieht</inlineHelpText>
        <label>Requirement-Nr</label>
        <referenceTo>Lcm_Requirement__c</referenceTo>
        <relationshipLabel>Testfälle</relationshipLabel>
        <relationshipName>P7S1_Testcase</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lcm_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person, die den Review durchführt.</description>
        <inlineHelpText>Person, die den Review durchführt.</inlineHelpText>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>P7S1_LcmTestcase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lcm_State__c</fullName>
        <description>Status des Testfalls. Steuert den Review-Prozess.</description>
        <inlineHelpText>Status des Testfalls. Steuert den Review-Prozess.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>1 in Bearbeitung</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2 zum Review freigegeben</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>3 abgelehnt</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>4 Review ok</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>5 QS - TF überarbeiten</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>6 QS - TF obsolet</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>7 QS - TF freigegeben</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>8 QS - TF on hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lcm_StepsNew__c</fullName>
        <label>Testschritte</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_TestCaseName__c</fullName>
        <description>Name des Testfalls, Kurzbeschreibung</description>
        <inlineHelpText>Name des Testfalls, Kurzbeschreibung</inlineHelpText>
        <label>Testfall-Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_TestSphere__c</fullName>
        <description>Zuordnung zur jeweiligen Test-Sphere. Hilfefeld für die Freigabeeinstellung</description>
        <inlineHelpText>Zuordnung zur jeweiligen Test-Sphere. Hilfefeld für die Freigabeeinstellung</inlineHelpText>
        <label>Lcm_TestSphere</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_Testdata__c</fullName>
        <description>Hinweise zu Testdaten, mit denen der Testfall ausgeführt werden soll</description>
        <inlineHelpText>Hinweise zu Testdaten, mit denen der Testfall ausgeführt werden soll</inlineHelpText>
        <label>Testdaten</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_TypeRegression__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Testfall, der für Regressionstests relevant ist</description>
        <inlineHelpText>Testfall, der für Regressionstests relevant ist</inlineHelpText>
        <label>Regressionstestfall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lcm_TypeUmitRollout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Testfall, der bei Unit Rollouts relevant ist.</description>
        <inlineHelpText>Testfall, der bei Unit Rollouts relevant ist.</inlineHelpText>
        <label>Unit Rollout Testfall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Testfall</label>
    <listViews>
        <fullName>Alle</fullName>
        <columns>Lcm_Requirement__c</columns>
        <columns>Lcm_RequirementName__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_TestCaseName__c</columns>
        <columns>Lcm_State__c</columns>
        <columns>Lcm_Reviewer__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>LCM_MeineTestfaelle</fullName>
        <columns>Lcm_Requirement__c</columns>
        <columns>Lcm_RequirementName__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_TestCaseName__c</columns>
        <columns>Lcm_State__c</columns>
        <columns>Lcm_Reviewer__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>Meine Testfälle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>SalesExcellence</fullName>
        <columns>Lcm_Requirement__c</columns>
        <columns>Lcm_RequirementName__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_TestCaseName__c</columns>
        <columns>Lcm_State__c</columns>
        <columns>Lcm_Reviewer__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Lcm_TypeRegression__c</columns>
        <columns>Lcm_TypeUmitRollout__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_TestSphere__c</field>
            <operation>equals</operation>
            <value>Se</value>
        </filters>
        <label>SalesExcellence</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>SalesExcellence_Regressionstests</fullName>
        <columns>Lcm_Requirement__c</columns>
        <columns>Lcm_RequirementName__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_TestCaseName__c</columns>
        <columns>Lcm_State__c</columns>
        <columns>Lcm_Reviewer__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Lcm_TypeRegression__c</columns>
        <columns>Lcm_TypeUmitRollout__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_TestSphere__c</field>
            <operation>equals</operation>
            <value>Se</value>
        </filters>
        <filters>
            <field>Lcm_TypeRegression__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>SalesExcellence Regressionstests</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>SalesExcellence_Unit_Rollout_Tests</fullName>
        <columns>Lcm_Requirement__c</columns>
        <columns>Lcm_RequirementName__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_TestCaseName__c</columns>
        <columns>Lcm_State__c</columns>
        <columns>Lcm_Reviewer__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Lcm_TypeRegression__c</columns>
        <columns>Lcm_TypeUmitRollout__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_TestSphere__c</field>
            <operation>equals</operation>
            <value>Se</value>
        </filters>
        <filters>
            <field>Lcm_TypeUmitRollout__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>SalesExcellence Unit Rollout Tests</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>thun</fullName>
        <columns>Lcm_Requirement__c</columns>
        <columns>Lcm_RequirementName__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_TestCaseName__c</columns>
        <columns>Lcm_State__c</columns>
        <columns>Lcm_Reviewer__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Lcm_TypeRegression__c</columns>
        <columns>Lcm_TypeUmitRollout__c</columns>
        <filterScope>Everything</filterScope>
        <label>thun</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Testfall-Nr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Testfälle</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>